# floorplan_app

./: .gitignore  INTERFACE.md  README.md  ROADMAP.md  main.py  pyproject.toml  test_installation.py  test_references.py  test_roomplan_import.py
RoomScanner/: ContentView.swift  FloorPlanPreview.swift  Info.plist  MappingFloorPlanView.swift  Models.swift  README.md  RoomScannerApp.swift  ScanManager.swift  ScanningView.swift
core/: __init__.py  geometry.py  level.py
data/examples/: comprehensive_house.floorplan  create_comprehensive_house.py  create_example_plans.py  demonstrate_new_features.py  l_shaped_house.floorplan
data/iphone_scans/: office2.json
docs/: ARCHITECTURE.md  CHANGELOG.md  MACOS_CRASH_FIX.md  NEW_FEATURES.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  UI_IMPROVEMENTS.md
examples/: create_comprehensive_house.py  create_example_plans.py  house_with_features.floorplan  simple_house.floorplan
gui/: __init__.py  canvas.py  canvas_drawing.py  canvas_events.py  floor_selector.py  main_window.py  object_library.py  object_selection.py  properties_panel.py  viewer_3d.py
scripts/: generate_screenshots.py
scripts/debug/: debug_rotation.py
tests/: analyze_corners.py  debug_rotation.py  test_file_load.py  test_geometry.py  test_installation.py  test_references.py  test_roomplan_import.py  visualize_wall_order.py
utils/: __init__.py  annotations.py  clipboard.py  export.py  iphone_importer.py  logging_config.py  measurements.py  roomplan_importer.py  transforms.py  undo_commands.py  undo_stack.py
